[doc] Add shape for supporting selections in URLs (WIP)
Bug: https://github.com/eclipse-sirius/sirius-web/issues/4376
Signed-off-by: Florent Latombe <florent.latombe@obeo.fr>

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -11,6 +11,7 @@
 - Add loading indicators for long actions
 - Add impact analysis before tool execution
 - Add support for artifact publication from a project
+- Add project elements selection to URLs
 
 
 === Architectural decision records
